@@ -35,11 +35,11 @@ panel.quantile <-
     ok <- is.finite(x) & is.finite(y)
     if (sum(ok) < 1) 
         return()
-    x <- x[ok]
-    y <- y[ok]
-    data <- list(x = x, y = y)
+    x <- as.numeric(x)[ok]
+    y <- as.numeric(y)[ok]
     mod <- do.call(method,
-                   c(alist(form, tau = tau, data = data), list(...)))
+                   c(alist(form, tau = tau, data = list(x = x, y = y)),
+                     list(...)))
     xseq <- seq(min(x), max(x), length = n)
     pred <- predict(mod, data.frame(x = xseq),
                     interval = if (ci) "confidence" else "none",
